<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.home.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_dark">

            <LinearLayout
                style="@style/Widget.Shrine.Backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/primary_dark"
                android:orientation="vertical"
                android:paddingTop="88dp"
                android:paddingBottom="30dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/filterBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:backgroundTint="@color/primary_light"
                        android:letterSpacing="0.1"
                        android:text="@string/filter"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/maleGenderIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:tint="@color/primary_light"
                        app:srcCompat="@drawable/ic_gender_male" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/genderSlider"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:stepSize="1.0"
                        android:value="1.0"
                        android:valueFrom="0.0"
                        android:valueTo="2.0"
                        app:labelBehavior="gone"
                        app:thumbColor="@color/primary_light"
                        app:tickVisible="false"
                        app:trackColor="@color/primary_light"
                        app:trackHeight="10dp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/femaleGenderIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:tint="@color/primary_light"
                        app:srcCompat="@drawable/ic_gender_female" />

                </LinearLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/pet"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:layoutDirection="locale">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/petsChipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layoutDirection="locale"
                        app:singleLine="true"
                        app:singleSelection="true" />
                </HorizontalScrollView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/coat"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"

                    android:layoutDirection="locale">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/coatsChipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layoutDirection="locale"
                        app:singleLine="true"
                        app:singleSelection="true" />
                </HorizontalScrollView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/pet_color"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:layoutDirection="locale">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/colorChipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layoutDirection="locale"
                        app:singleLine="true"
                        app:singleSelection="true" />
                </HorizontalScrollView>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_bar"
                style="@style/Widget.Shrine.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                app:contentInsetStart="0dp"
                app:navigationIcon="@drawable/ic_paw"
                app:title="@string/app_name"
                app:titleTextColor="@color/white" />


            <ProgressBar
                android:id="@+id/filterProgress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/primary_light"
                android:visibility="gone" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/filterRefreshBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/primary_light"
            android:contentDescription="@string/error_filter_refresh"
            android:src="@drawable/ic_refresh"
            android:tint="@color/white"
            android:visibility="gone"
            app:backgroundTint="@color/primary_light"
            app:fabCustomSize="30dp" />

        <ProgressBar
            android:id="@+id/filterError"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:indeterminateTint="@color/primary_light"
            android:visibility="gone" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/product_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@drawable/pet_grid_background_shape"
            android:gravity="center"
            android:orientation="vertical"
            android:translationZ="3dp"
            android:visibility="visible">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="Error Text" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
